--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ facebook:
   username               :
   app_id                 :
   publisher              :
-og_image                 : IMG_20220726_122912.jpg # Open Graph/Twitter default site image
+og_image                 : # Open Graph/Twitter default site image
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
 social:
@@ -82,7 +82,7 @@ analytics:
 # Site Author
 author:
   name             : "Your Sidebar Name"
-  avatar           : "profile.png"
+  avatar           : "IMG_20220726_122912.jpg"
   bio              : "Your biography for the left-hand sidebar"
   location         : "Location"
   employer         :
