--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 # Site Author
 author:
   name             : "Your Sidebar Name"
-  avatar           : "IMG_20220726_122912.jpg"
+  avatar           : "IMG_20220726_122912.png"
   bio              : "Your biography for the left-hand sidebar"
   location         : "Location"
   employer         :
