--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Ali faryadras 1/ Site Title"
+title                    : "Ali faryadras"
 title_separator          : "-"
 name                     : &name "Ali Faryadras"
 description              : &description "personal description"
