--- a/_config.yml
+++ b/_config.yml
@@ -81,10 +81,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
+  name             : "Ali faryadras"
   avatar           : "ali-faryadras-pic.png"
   bio              : "Your biography for the left-hand sidebar"
-  location         : "Location"
+  location         : "Tehran-Iran"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "http://yourfullgooglescholarurl.com"
