--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ analytics:
 author:
   name             : "Ali faryadras"
   avatar           : "ali-faryadras-pic.png"
-  bio              : "Your biography for the left-hand sidebar"
+  bio              : "I’m a student of Mathematics and Applications at Sharif University of Technology."
   location         : "Tehran-Iran"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
