--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   name             : "Ali faryadras"
   avatar           : "ali-faryadras-pic.png"
   bio              : "I’m a student of Mathematics and Applications at Sharif University of Technology."
-  location         : "Tehran-Iran"
+  location         : "Tehran, Iran"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
