--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ analytics:
 author:
   name             : "Ali faryadras"
   avatar           : "ali-faryadras-pic.png"
-  bio              : "Master's Student at Shahid Behesti University"
+  bio              : "Master's Student at Shahid Beheshti University"
   location         : "Tehran, Iran"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
