--- a/_config.yml
+++ b/_config.yml
@@ -87,8 +87,8 @@ author:
   location         : "Tehran, Iran"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : #"http://yourfullgooglescholarurl.com"
-  email            :  "ali.faryadras78@student.sharif.ir"
+  googlescholar    : "https://scholar.google.com/citations?hl=en&user=ZegtyT4AAAAJ"
+  email            :  "ali.faryadras78@yahoo.com"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
