--- a/_config.yml
+++ b/_config.yml
@@ -83,13 +83,13 @@ analytics:
 author:
   name             : "Ali faryadras"
   avatar           : "ali-faryadras-pic.png"
-  bio              : "Master's Student at Shahid Beheshti University"
+  bio              : "Research Assistant at Sharif Policy Research Institute"
   location         : "Tehran, Iran"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=ZegtyT4AAAAJ"
   email            :  "ali.faryadras78@yahoo.com"
-  researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
+  researchgate     :  "https://www.researchgate.net/profile/Ali-Faryadras"
   uri              :
   bitbucket        :
   codepen          :
